BUG CORE-2804: Use myriad-pro font.
QA: Just changing a font. Quick pass to make sure text looks
OK throughout app, especially around truncation and ellipsis.

--- a/app/styles/dataCards/cards.sass
+++ b/app/styles/dataCards/cards.sass
@@ -20,7 +20,6 @@ $card-size-3-height: 200px + $card-border-width * 2
 body
   background-color: $cards-bg-color
   padding: 0
-  font-family: 'Myriad Pro', Arial, sans-serif
 
 
 /* MOBILE/RESPONSIVE DESIGN. SEE DESKTOP-SPECIFIC STYLES BELOW */
