--- a/app/styles/dataCards/main.sass
+++ b/app/styles/dataCards/main.sass
@@ -7,7 +7,7 @@ $bgColor: #4a525a
 body
   background: $bgColor
   color: white
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif
+  font-family: 'myriad-pro', 'Helvetica Neue', Helvetica, Arial, sans-serif
   weight: 200
   margin: 0
 
